--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dotted_border: ^2.1.0 
+  flutter_bloc: ^9.1.1
+  intl: ^0.20.2
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
