--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -38,9 +38,13 @@ dependencies:
   flutter_bloc: ^9.1.1
   intl: ^0.20.2
   fl_chart: ^1.1.1
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
 
 
   flutter_launcher_icons: ^0.13.1
+  dio: ^5.9.0
+  logger: ^2.6.2
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -57,6 +61,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.2
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
