--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   dio: ^5.9.0
   logger: ^2.6.2
+  image_picker: ^1.2.1
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
