--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   dio: ^5.9.0
   logger: ^2.6.2
   image_picker: ^1.2.1
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  shared_preferences: ^2.5.3
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
