--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   sqflite: ^2.4.2
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
+  get_it: ^9.0.5
+  dartz: ^0.10.1
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
