feat: nutrition api integration

--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   get_it: ^9.0.5
   dartz: ^0.10.1
   image: ^4.5.4
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
