--- a/flutter-service/vitalytics/pubspec.yaml
+++ b/flutter-service/vitalytics/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image: ^4.5.4
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
+  google_fonts: ^6.3.2
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -91,6 +92,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
